<resources>
    <string name="app_name" translatable="false">Feet3</string>
    <string name="stops_history_title">Stops History</string>
    <string name="back_button">Back</string>
    <string name="delete_history">Delete history</string>
    <string name="delete_history_confirmation">Do you want to delete your history?</string>
    <string name="confirmation">Ok</string>
    <string name="cancelation">Cancel</string>
    <string name="map_button">Map</string>
    <string name="edit_button">Edit</string>
    <string name="detected_networks">Detected networks</string>
    <string name="save_location">Save location</string>
    <string name="title_activity_maps">Map</string>
    <string name="deleted_history_toast">History was cleared</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="no_location_detected">No location detected</string>
    <string name="number_of_times">Nº of times</string>
    <string name="date_string">Date</string>
    <string name="name_string">Name</string>
    <string name="mac_address_string">Mac Address</string>
    <string name="save_String">Save</string>
    <string name="preferences_stop_detection_time_title">Stop detection time</string>
    <string name="preferences_stop_detection_distance_title">Stop detection distance</string>
    <string name="stop_detection_time" translatable="false">stop_detection_time</string>
    <string name="stop_detection_distance" translatable="false">stop_detection_distance</string>
    <string name="Preferences_title">Preferences</string>


</resources>
