<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="main.feet3.PositionInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Medium Text"
        android:id="@+id/posInfo_title"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/detected_networks"
        android:id="@+id/posInfo_networks_header"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/posInfo_networks_list"
        android:layout_below="@+id/posInfo_networks_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ListView
        android:choiceMode="singleChoice"
        android:listSelector="#666666"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/posInfo_stopHistory_list"
        android:layout_below="@+id/posInfo_stopHistory_header"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/posInfo_networks_header" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_button"
        android:id="@+id/posinfo_map_button"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/posInfo_stopHistory_list"
        android:layout_alignEnd="@+id/posInfo_stopHistory_list" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/stops_history_title"
        android:id="@+id/posInfo_stopHistory_header"
        android:layout_below="@+id/posinfo_map_button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
